examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcs-board
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tcs-board
                port:
                  name: http
